--- a/workout_tracker/core/templates/core/index.html
+++ b/workout_tracker/core/templates/core/index.html
@@ -1,1 +1,14 @@
-<a href="{% url core_register_geoloqi %}">Geoloqi</a>
+<html>
+<head>
+<title>Home</title>
+</head>
+<body>
+<div id="login-box">
+{% if not user.is_authenticated %}
+Login via: <a href="{% url core_register_geoloqi %}"><img src="{{ STATIC_URL }}images/geoloqi-logo.png" alt="Geoloqi"/></a>
+{% else %}
+Ohai {{ user }}
+{% endif %}
+</div>
+</body>
+</html>
