--- a/workout_tracker/core/templates/core/index.html
+++ b/workout_tracker/core/templates/core/index.html
@@ -1,3 +1,4 @@
+{% load url from future %}
 <html>
 <head>
 <title>Home</title>
@@ -5,9 +6,9 @@
 <body>
 <div id="login-box">
 {% if not user.is_authenticated %}
-Login via: <a href="{% url core_register_geoloqi %}"><img src="{{ STATIC_URL }}images/geoloqi-logo.png" alt="Geoloqi"/></a>
+Login via: <a href="{% url 'core_register_geoloqi' %}"><img src="{{ STATIC_URL }}images/geoloqi-logo.png" alt="Geoloqi"/></a>
 {% else %}
-Ohai {{ user }}
+Ohai {{ user }} <a href="{% url 'logout' %}">logout</a>
 {% endif %}
 </div>
 </body>
