dailymile-logo added

--- a/workout_tracker/core/templates/core/index.html
+++ b/workout_tracker/core/templates/core/index.html
@@ -8,7 +8,8 @@
 {% if not user.is_authenticated %}
 Login via: <a href="{% url 'core_register_geoloqi' %}"><img src="{{ STATIC_URL }}images/geoloqi-logo.png" alt="Geoloqi"/></a>
 {% else %}
-Ohai {{ user }} <a href="{% url 'logout' %}">logout</a>
+<div>Ohai {{ user }} <a href="{% url 'logout' %}">logout</a></div>
+<div>Associate with: <a href="{% url 'core_register_dailymile' %}"><img src="{{ STATIC_URL }}images/dailymile-logo.png" alt="DailyMile"/></a></div>
 {% endif %}
 </div>
 </body>
