added base template

--- a/workout_tracker/core/templates/core/success.html
+++ b/workout_tracker/core/templates/core/success.html
@@ -1,4 +1,8 @@
+{% extends 'base.html' %}
 {% load url from future %}
+{% block title %}Success!{% endblock %}
+{% block content %}
 <div id="user">User: {{user}}</div>
 <div id="is-authenticated">Is authenticated: {{ user.is_authenticated }}</div>
 <div><a href="{% url 'index' %}">Home</a></div>
+{% endblock %}
