--- a/workout_tracker/core/templates/core/index.html
+++ b/workout_tracker/core/templates/core/index.html
@@ -1,9 +1,7 @@
+{% extends 'base.html' %}
 {% load url from future %}
-<html>
-<head>
-<title>Home</title>
-</head>
-<body>
+{% block title %}Home{% endblock %}
+{% block content %}
 <div id="login-box">
 {% if not user.is_authenticated %}
 Login via: <a href="{% url 'core_register_geoloqi' %}"><img src="{{ STATIC_URL }}images/geoloqi-logo.png" alt="Geoloqi"/></a>
@@ -12,5 +10,4 @@ Login via: <a href="{% url 'core_register_geoloqi' %}"><img src="{{ STATIC_URL }
 <div>Associate with: <a href="{% url 'core_register_dailymile' %}"><img src="{{ STATIC_URL }}images/dailymile-logo.png" alt="DailyMile"/></a></div>
 {% endif %}
 </div>
-</body>
-</html>
+{% endblock %}
