--- a/workout_tracker/core/templates/core/index.html
+++ b/workout_tracker/core/templates/core/index.html
@@ -8,6 +8,7 @@ Login via: <a href="{% url 'core_register_geoloqi' %}"><img src="{{ STATIC_URL }
 {% else %}
 <div>Ohai {{ user }} <a href="{% url 'logout' %}">logout</a></div>
 <div>Associate with: <a href="{% url 'core_register_dailymile' %}"><img src="{{ STATIC_URL }}images/dailymile-logo.png" alt="DailyMile"/></a></div>
+<div>Log new <a href="{% url 'workout_splash' %}">workout</a></div>
 {% endif %}
 </div>
 {% endblock %}
