--- a/workout_tracker/templates/base.html
+++ b/workout_tracker/templates/base.html
@@ -1,9 +1,13 @@
 <html>
 <head>
+<link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/bootstrap.css">
 <title>GWT - {% block title %}{% endblock %}</title>
 </head>
 <body>
+<div class="container">
+<h1>Geoloqi Workout Tracker</h1>
 {% block content %}
 {% endblock %}
+</div>
 </body>
 </html>
