--- a/workout_tracker/templates/base.html
+++ b/workout_tracker/templates/base.html
@@ -4,6 +4,19 @@
 <title>GWT - {% block title %}{% endblock %}</title>
 </head>
 <body>
+    <div class="topbar">
+      <div class="topbar-inner">
+        <div class="container">
+          <a class="brand" href="#">Geoloqi Workout Tracker</a>
+          <ul class="pill">
+            <li><a href="#overview">Home</a></li>
+            <li><a href="#javascript">Log Workout</a></li>
+            <li><a href="#less">Profile</a></li>
+            <li><a href="#less">Sign Log</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
 <div class="container">
 <h1>Geoloqi Workout Tracker</h1>
 {% block content %}
